--- a/src/app/features/characters/container/container.component.html
+++ b/src/app/features/characters/container/container.component.html
@@ -1,1 +1,2 @@
-<app-presenter [characters]="characters$ | async"></app-presenter>
+<app-detail [character]="character$ | async"></app-detail>
+<app-list [characters]="characters$ | async"></app-list>
