--- a/src/app/features/characters/presenters/list/list.component.html
+++ b/src/app/features/characters/presenters/list/list.component.html
@@ -1,6 +1,6 @@
-<div class="character-grid">
+<div class="character-grid" >
   <div class="character-card" *ngFor="let character of characters">
-    <h3>{{ character.name }}</h3>
+    <h3><a [routerLink]="['/characters', character.id]">{{ character.name }}</a></h3>
     <img [src]="character.image" alt="{{ character.name }}">
   </div>
 </div>
